Fix: adjust links so that section is not cut off by header when navigating. Remove Home link for simplicity

--- a/responsive-web-design/product-landing-page/styles/styles.css
+++ b/responsive-web-design/product-landing-page/styles/styles.css
@@ -171,6 +171,7 @@ p {
 }
 
 #experiences:target {
+    margin-top: -10px;
     padding-top: 90px;
 }
 
@@ -440,5 +441,9 @@ p {
     #packages::before {
         margin-top: 0;
         margin-bottom: 50px;
+    }
+    #experiences:target {
+        margin-top: -20px;
+        padding-top: 90px;
     }
  }
